<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">News Reader</string>
    <string name="widget_name">News Reader</string>

    <string name="small_arrow">&#8594;</string>

    <string name="widget_loading">Fetching news...</string>
    <string name="widget_error">No news\navailable</string>
    
    <string name="tts_play_label">Read Aloud</string>
    <string name="tts_settings_label">Text-to-speech settings</string>
    <string name="menu_share_label">Share</string>
    <string name="copy_label">Copy</string>	
    <string name="go_prev_label">Previous item</string>
    <string name="go_next_label">Next item</string>
    <string name="select_all_user_feeds">Select all user feeds</string>
    <string name="move_to_category">Move to category</string>
    <string name="noitems_please_select">No items, please select at least one item</string>

    <string name="menu_preferences">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_rss_refresh">Refresh news</string>
    <string name="menu_publisher">Publisher information</string>
    <string name="msg_publisher">Publisher of current feed: &lt;a href="%2$s"&gt;%1$s&lt;/a&gt;</string>

    <string name="app_descrip">This application provides the fastest way to get news from the web</string>

    <string name="set_preferences">Settings</string>

    <string name="msg_error">Error</string>
    <string name="msg_connection_problem">Network error. Please check your connection to internet.</string>
    <string name="msg_feedback_sent">Feedback sent...</string>

    <string name="sel_cat_label">Select a category</string>
    <string name="sel_feed_label">Select a feed</string>
    
    <string name="send_fb_label">Send feedback</string>

    <string name="show_help_label">Help</string>

    <string name="show_label">Description</string>

    <string name="dlg_title_hint">Title of the feed</string>
    <string name="dlg_rss_hint">Address of a valid rss feed</string>
    <string name="dlg_add_feed">Insert new user feed</string>
    <string name="dlg_edit_feed">Edit user feed</string>

    <string name="dlg_cat_title_hint">Title of the category</string>
    <string name="dlg_cat_description_hint">Short description of the category</string>
    <string name="dlg_add_category">Insert new category</string>
    <string name="dlg_edit_category">Edit category</string>

    <string name="news_settings">News Feeds</string>
    <string name="news_feed">News Feed</string>
    <string name="delete">Delete</string>
    <string name="import_opml">Import OPML file</string>
    <string name="news_feed_desc">Select the News feed to show</string>
    <string name="refresh_timer">Update period</string>
    <string name="max_titles">Max number of headlines</string>
    <string name="num_items">Number of items</string>
    <string name="missing_url">Please enter a valid rss feed address</string>
    <string name="missing_title">Please enter a title</string>

   
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="other">Other</string>

    <string name="display">Display</string>
    <string name="use_external_browser">Use external browser</string>

    <string name="prefs_theme">Theme</string>
    <string name="prefs_theme_sub">Change the colors</string>
    <string name="prefs_theme_chooser">Background</string>
    <string name="prefs_fontsize">Font size</string>
    <string name="download_images">Download images</string>

    <string name="feeds_language">Feeds language</string>
    <string name="dialog_title_list_preference">Feeds language</string>
    <string name="default_feed_language_code">en</string>

    <string name="msg_rss_error">The news feed is incorrect or the feed server is unavailable.</string>
    <string name="msg_http_error">Error returned by the feed server: </string>
    <string name="msg_bad_answer">Invalid content received from the feed server, error code: </string>
    <string name="msg_bad_mimetype">Incorrect type of content received from the feed server.</string>
    <string name="msg_generic_problem">Unexpected error.</string>
    <string name="msg_corrupt_file">The application is corrupted. &lt;br&gt;Suggested solution:&lt;br&gt;1) Uninstall this application&lt;br&gt;2) Re-install this application from Google Play</string>    
    
	<string name="msg_done">Done!</string>    
	<string name="msg_nothing_to_delete">Nothing to delete</string>

    <string name="backup_hint">There are unsaved data, do you want to backup?</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>    
    <string name="export_label">Export</string>    
    <string name="import_label">Import</string>    
    <string name="local_storage">Local storage</string>
    <string name="ext_storage">External Storage</string>
    <string name="msg_missing_file_manager">Please install a file manager</string>
	
    <string name="exit">Exit</string>    
    <string name="msg_external_storage_notwritable">Cannot write to SD card, please check SD card</string>
    <string name="msg_external_storage_notreadble">Cannot read SD card, please check SD card</string>
    <string name="msg_cannot_write_backup">Cannot write backup</string>
    <string name="msg_cannot_read_backup">Cannot read backup</string>
    <string name="msg_permission_denied">Operation failed due to permission denied</string>
    <string name="msg_missing_backup">Backup file does not exist</string>
	<string name="msg_backup_ok">Successful backup</string>
	<string name="msg_restore_ok">Successful restore</string>

    <string name="msg_cannot_write_file">Cannot write file</string>
    <string name="msg_cannot_read_file">Cannot read file</string>
    <string name="msg_missing_file">File does not exist</string>
	<string name="msg_export_ok">Successful export</string>
	<string name="msg_import_ok">Successful import</string>

    <string name="textColor">Regular text</string>
    <string name="hyperlinkColor">Hyperlink text</string>
    <string name="genericColor">Generic color</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="nightmode">Night mode</string>
    <string name="auto">Automatic</string>

    <string name="smart_titles">Smart titles</string>

    <string name="full_story">Full story</string>

    <string name="now">now</string>
    <string name="ago">ago</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>

    <string name="reset_default">Default</string>

    <string name="credits">Credits</string>
    <string name="credits_text">This application includes the following items:&lt;br&gt;&lt;br&gt;&lt;b&gt;Android Support&lt;/b&gt; libraries distributed under the Apache License 2.0, http://www.apache.org/licenses</string>

</resources>
