<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            app:title="@string/news_settings">
        <ListPreference
            app:key="feeds_language"
            app:title="@string/feeds_language"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/entries_list_preference"
            app:entryValues="@array/entryvalues_list_preference"
            app:dialogTitle="@string/dialog_title_list_preference"
            app:defaultValue="@string/default_feed_language_code" />
        <PreferenceScreen
                app:key="news_feed"
                app:title="@string/news_feed"
                app:summary="@string/news_feed_desc">
            <intent android:action="android.intent.action.VIEW"
                    android:targetPackage="livio.rssreader"
                    android:targetClass="livio.rssreader.SelectCategory" />
        </PreferenceScreen>
        <ListPreference
                app:key="refresh_timer"
                app:title="@string/refresh_timer"
                app:entries="@array/refreshTimerArray"
                app:entryValues="@array/refreshTimerValueArray"
                app:useSimpleSummaryProvider="true"
                app:dialogTitle="@string/refresh_timer"
                app:defaultValue="3600" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/display">
        <ListPreference
            app:key="download_images"
            app:title="@string/download_images"
            app:entries="@array/connectivityArray"
            app:entryValues="@array/connectivityValueArray"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/download_images"
            app:defaultValue="any" />
        <SwitchPreference
            app:key="use_external_browser"
            app:title="@string/use_external_browser"
            app:defaultValue="false" />
        <Preference
            app:key="theme"
            app:title="@string/prefs_theme"
            app:summary="@string/prefs_theme_sub">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="livio.rssreader"
                android:targetClass="livio.rssreader.SelectColors" />
        </Preference>
        <tools.SeekBarPreference
            app:key="fontsize"
            app:title="@string/prefs_fontsize"
            app:dialogTitle="@string/prefs_fontsize"
            android:defaultValue="16"
            android:max="26"
            app:min="12"
            app:displayMode="percentage"
            app:displaySuffix="%"
            app:interval="2"/>
        <ListPreference
            app:key="max_titles"
            app:title="@string/max_titles"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/titles_size"
            app:entryValues="@array/titles_size"
            app:dialogTitle="@string/num_items"
            app:defaultValue="20" />
        <SwitchPreference
            app:key="smart_titles"
            app:title="@string/smart_titles"
            app:defaultValue="false" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
