<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--item
        android:id="@+id/menu_selectfeed"
        app:showAsAction="ifRoom"
        android:title="@string/news_feed"
        android:icon="@drawable/ic_menu_more" -->
    <item
        android:id="@+id/rss_refresh"
        app:showAsAction="never"
        android:title="@string/menu_rss_refresh"
        android:icon="@drawable/ic_menu_refresh_l" />
    <item
        android:id="@+id/menu_publisher"
        app:showAsAction="never"
        android:title="@string/menu_publisher"/>
    <item
        android:id="@+id/menu_play"
        android:title="@string/tts_play_label"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_play_arrow_white_36dp"/>
    <item
        android:id="@+id/menu_preferences"
        app:showAsAction="never"
        android:title="@string/menu_preferences"
        android:icon="@android:drawable/ic_menu_preferences" />
    <item
        android:id="@+id/menu_backup"
        app:showAsAction="never"
        android:title="@string/backup"
        android:icon="@drawable/ic_backup_white_24dp"/>
    
    <item
        android:id="@+id/menu_restore"
        app:showAsAction="never"
        android:title="@string/restore"
        android:icon="@drawable/ic_cloud_download_white_24dp">
    </item>

    <item
        android:id="@+id/menu_help"
        app:showAsAction="never"
        android:title="@string/menu_help"
        android:icon="@drawable/ic_help_outline_white_24dp" />

    <item
        android:id="@+id/menu_exit"
        app:showAsAction="never"
        android:title="@string/exit"
        android:icon="@drawable/ic_clear_white_24dp"/>
</menu>
