<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--item
        android:id="@+id/menu_addfeed"
        android:title="@string/add_feed"
        android:icon="@android:drawable/ic_menu_add" -->

    <item
        android:id="@+id/menu_del_feed"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_select_all"
        android:title="@string/select_all_user_feeds"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/menu_move_feed"
        android:title="@string/move_to_category"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/menu_import_opml"
        android:title="@string/import_opml"
        app:showAsAction="never"
        android:visible="true"/>

</menu>
