<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/dialogPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/theme_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_vertical"
        android:checked="false"
        android:text="@string/auto"/>

	<TextView
	    android:id="@+id/theme"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/themes"
	    android:layout_alignParentStart="true"
        android:layout_below="@id/theme_auto"
	    android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginStart="8dp"
		android:gravity="center_vertical"
	    android:text="@string/prefs_theme" />

    <Button
        android:id="@+id/themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/theme_auto"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@id/theme" />

    <Space
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@+id/themes"/>

	<ListView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    android:layout_below="@id/separator"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentStart="true"
		android:id="@+id/itemlist"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_default"
        android:layout_below="@id/itemlist"
        android:id="@+id/reset_colors"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
